--- a/public/a2/index.html
+++ b/public/a2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Title</title>
 </head>
 <body>
 <h1>HTML Examples</h1>
@@ -101,7 +101,7 @@ Loading an image from the internet:<br/>
 
 Loading a local image:<br/>
 
-<img src="teslabot.jpg"
+<img src="teslabot.jpeg"
      height="200px"/>
 
 <h2>Text fields</h2>
@@ -228,11 +228,7 @@ to get dummy text<br/>
 
 Checkout my <a href="other-page.html">other page</a>
 
-<h1>Web Dev Assignments</h1>
-<ul>
-    <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-    <li><a href="tuiter/navigation.html">Tuiter</a></li>
-</ul>
+
 
 <h1>Table of content</h1>
 <ul>
@@ -241,34 +237,34 @@ Checkout my <a href="other-page.html">other page</a>
     <li><a href="#embedding-slide">Embedding Google slide</a></li>
 
     <a name="embedding-website"></a>
-<h2>Embedding other websites</h2>
-<a href="#top">Top</a><br/>
-<iframe width="600"
-        height="400"
-        src="https://www.pexels.com/">
-</iframe>
-<a name="embedding-youtube"></a>
-<h2>Embedding YouTube</h2>
-<a href="#top">Top</a><br/>
-<iframe width="560"
-        height="315"
-        src="https://www.youtube.com/embed/J2u2WBNzDb8"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-</iframe>
-<a name="embedding-slides"></a>
-<h2>Embedding Google slides</h2>
-<a href="#top">Top</a><br/>
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQoIYM2gXzRLKt4q5D2-ZahG7zvVcAipkRvj5k9GVLiGDs8NPlLpO3Q08cPUKQbqhL6g8aZp1ZJSwrw/embed?start=false&loop=false&delayms=3000"
-        frameborder="0"
-        width="680"
-        height="418"
-        allowfullscreen="true"
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true">
-</iframe>
+    <h2>Embedding other websites</h2>
+    <a href="#top">Top</a><br/>
+    <iframe width="600"
+            height="400"
+            src="https://www.pexels.com/">
+    </iframe>
+    <a name="embedding-youtube"></a>
+    <h2>Embedding YouTube</h2>
+    <a href="#top">Top</a><br/>
+    <iframe width="560"
+            height="315"
+            src="https://www.youtube.com/embed/J2u2WBNzDb8"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+    </iframe>
+    <a name="embedding-slides"></a>
+    <h2>Embedding Google slides</h2>
+    <a href="#top">Top</a><br/>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQoIYM2gXzRLKt4q5D2-ZahG7zvVcAipkRvj5k9GVLiGDs8NPlLpO3Q08cPUKQbqhL6g8aZp1ZJSwrw/embed?start=false&loop=false&delayms=3000"
+            frameborder="0"
+            width="680"
+            height="418"
+            allowfullscreen="true"
+            mozallowfullscreen="true"
+            webkitallowfullscreen="true">
+    </iframe>
     <h1>Table of content</h1>
     <ul>
         <li><a href="#drawing-rectangles">Drawing rectangles</a></li>
@@ -277,25 +273,26 @@ Checkout my <a href="other-page.html">other page</a>
     </ul>
     <a name="drawing-rectangles"></a>
     <h2>Drawing rectangles</h2>
-<svg width="300" height="100">
-    <rect width="300" height="100"
-          style="fill:rgb(255,0,200); stroke-width:10;
+    <svg width="300" height="100">
+        <rect width="300" height="100"
+              style="fill:rgb(255,0,200); stroke-width:10;
    stroke:rgb(0,0,0)" />
-</svg>
+    </svg>
     <a name="drawing-circles"></a>
 
     <h2>Drawing circles</h2>
 
-<svg width="100" height="100">
-    <circle cx="50" cy="50" r="40"
-            stroke="green" stroke-width="4" fill="blue" />
-</svg>
+    <svg width="100" height="100">
+        <circle cx="50" cy="50" r="40"
+                stroke="green" stroke-width="4" fill="blue" />
+    </svg>
     <a name="drawing-polygons"></a>
-<h2>Drawing polygons</h2>
+    <h2>Drawing polygons</h2>
 
-<svg width="300" height="200">
-    <polygon points="100,10 40,198 190,78 10,78 160,198"
-             style="fill:#ff00b7; stroke:purple; stroke-width:5; fill-rule:evenodd;" />
-</svg>
+    <svg width="300" height="200">
+        <polygon points="100,10 40,198 190,78 10,78 160,198"
+                 style="fill:#ff00b7; stroke:purple; stroke-width:5; fill-rule:evenodd;" />
+    </svg>
+</ul>
 </body>
 </html>
