--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -37,7 +37,7 @@
         <div class="wd-icon-number-section">
             <div class="wd-icon-number">
                 <a class="wd-icon" href="#">
-                    <img src="https://www.iconsdb.com/icons/preview/gray/speech-bubble-xxl.png">
+                    <img src="comment.png">
                 </a>
                 <div>
                     <p class ="wd-number">22</p>
