--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,9 @@
 
     <h1>Welcome to Web Dev</h1>
 
-    <li><a href="a2/index.html">Assignment 2</a></li>
-    <li><a href="a3/index.html">Assignment 3</a></li>
+    <li><a href="a2/index.html">Assignment 2 - html</a></li>
+    <li><a href="a3/index.html">Assignment 3 - CSS</a></li>
+    <li><a href="a4/index.html">Assignment 4 - Bootstrap</a></li>
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
 
     <!--    <div id="root"></div>-->
