--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -12,40 +12,40 @@
 <body>
     <div class="container pt-2">
         <div class="row">
-            <div class="col-2">
+            <div class="col-xxl-2 col-xl-2 col-lg-1 col-md-2 col-sm-2 flex-wrap">
             <div class="list-group">
                 <i class="list-group-item fa-brands fa-twitter"></i>
-                <a href="../home.html" class="list-group-item list-group-item-action"><i class="fa-solid fa-house"></i>
-                    Home
+                <a href="#" class="list-group-item list-group-item-action"><i class="fa-solid fa-house" ></i>
+                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Home</span>
                 </a>
-                <a href="../explore/index.html" class="list-group-item list-group-item-action active">
-                    <i class="fa-solid fa-hashtag"></i> Explore
+                <a href="#" class="list-group-item list-group-item-action active">
+                    <i class="fa-solid fa-hashtag"></i> <span class="d-none d-xxl-inline-block d-xl-inline-block" >Explore</span>
                 </a>
-                <a href="../notification.html" class="list-group-item list-group-item-action">
-                    <i class="fa-sharp fa-solid fa-bell"></i> Notifications
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fa-sharp fa-solid fa-bell"></i> <span class="d-none d-xxl-inline-block d-xl-inline-block" >Notification</span>
                 </a>
-                <a href="../messages.html" class="list-group-item list-group-item-action"><i class="fa-solid fa-envelope"></i>
-                    Messages
+                <a href="#" class="list-group-item list-group-item-action"><i class="fa-solid fa-envelope"></i>
+                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Message</span>
                 </a>
-                <a href="../bookmarks/index.html" class="list-group-item list-group-item-action">
-                    <i class="fa-solid fa-bookmark"></i> Bookmarks
+                <a href="#" class="list-group-item list-group-item-action">
+                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Bookmarks</span>
                 </a>
-                <a href="../lists.html" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item list-group-item-action">
                     <i class="fa-solid fa-list"></i>
-                    Lists
+                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Lists</span>
                 </a>
-                <a href="../profile.html" class="list-group-item list-group-item-action">
+                <a href="#" class="list-group-item list-group-item-action">
                     <i class="fa-solid fa-user"></i>
-                    Profile
+                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Profile</span>
                 </a>
-                <a href="../more.html" class="list-group-item list-group-item-action">
-                    <i class="fa-solid fa-ellipsis"></i> More
+                <a href="#" class="list-group-item list-group-item-action">
+                    <i class="fa-solid fa-ellipsis"></i> <span class="d-none d-xxl-inline-block d-xl-inline-block"> More</span>
                 </a>
             </div>
             <button class="btn btn-primary w-100 mt-2 rounded-pill"> Tuit </button>
         </div>
 
-             <div class="col-6">
+            <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-9 col-sm-10 middle-section">
 
             <div class="row">
                 <div class="col-10">
@@ -77,7 +77,7 @@
                     <a class="nav-link" href="sports.html">
                         Sports</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item entertainment">
                     <a class="nav-link" href="entertainment.html">
                         Entertainment</a>
                 </li>
@@ -165,8 +165,8 @@
 
         </div>
 
-                <div class="col-4">
-                    <div>
+            <div class="col-xxl-4 col-xl-4 col-lg-4 d-none d-lg-inline-block d-xxl-inline-block d-xl-inline-block">
+                <div>
                         <ul class="list-group">
                             <li class="list-group-item fw-bolder">
                             Who to follow
