--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container pt-2">
         <div class="row">
-            <div class="col-xxl-2 col-xl-2 col-lg-1 col-md-2 col-sm-2 flex-wrap">
+            <div class="col-xxl-2 col-xl-2 col-lg-1 col-md-2 col-sm-2 flex-wrap left-section">
             <div class="list-group">
                 <i class="list-group-item fa-brands fa-twitter"></i>
                 <a href="#" class="list-group-item list-group-item-action"><i class="fa-solid fa-house" ></i>
@@ -49,6 +49,7 @@
 
             <div class="row">
                 <div class="col-10">
+
                     <div class="position-relative">
                         <input class="ps-5 form-control rounded-pill" placeholder="Search Tuiter"/>
                         <i class="ps-2 fa-solid fa-magnifying-glass position-absolute wd-search-tuiter"></i>
@@ -62,7 +63,7 @@
 
             <ul class="nav nav-tabs mt-1">
                 <li class="nav-item">
-                    <a class="nav-link active" href="for-you.html">
+                    <a class="nav-link" href="for-you.html">
                         For You</a>
                 </li>
                 <li class="nav-item">
@@ -78,69 +79,56 @@
                         Sports</a>
                 </li>
                 <li class="nav-item entertainment">
-                    <a class="nav-link" href="entertainment.html">
+                    <a class="nav-link active" href="entertainment.html">
                         Entertainment</a>
                 </li>
             </ul>
             <div class="position-relative">
-                <img src="../../images/starship.jpg" width="100%"/>
+                <img src="../../images/universe.jpg" width="100%"/>
+                <p class="position-absolute top-280px left-0 text-white">
+                    Music - Last night
+                </p>
                 <h1 class="position-absolute bottom-0 left-0 text-white">
-                    SpaceX's Starship
+                    BTS and Coldplay release their new song, My Universe
                 </h1>
             </div>
-            <ul class="list-group">
+
+            <div class="dark-mode-lower-middle">
+                <ul class="list-group">
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8">
                             <div class="text-secondary">
-                             Web Development
+                             Trending in R&B & soul
                             </div>
                             <div class="fw-bolder">
-                            ReactJS <i class="fa-solid fa-circle-check"></i> <small class="text-secondary"> - 2h</small>
+                            R Kelly
                             </div>
-                            <div class="fw-bolder">
-                            React.js is a component based front end library that makes it very easy to build Single Page
-                            Applications or SPAs
+                            <div class="text-secondary">
+                                18.2K Tweets
                             </div>
                         </div>
 
                     <div class="col-4">
-                        <img class="float-end" src="../../images/react.png" height="100px">
+                        <i class="fa-solid fa-ellipsis float-end"></i>
                     </div>
                     </div>
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8">
-                            <div class="fw-bolder">
-                                JavaScript <i class="fa-solid fa-circle-check"></i>
-                                <small class="text-secondary"> - 2h</small>
+                            <div class="text-secondary">
+                                Trending in R&B & soul
                             </div>
                             <div class="fw-bolder">
-                                JavaScript is programming language that can run on browsers as well as desktops
+                                Chloe
                             </div>
                             <div class="text-secondary">
-                                123K Tweets
+                               Trending with Halle
                             </div>
                         </div>
+
                         <div class="col-4">
-                            <img class="float-end rounded" src="../../images/js.png" height="100px">
-                        </div>
-                </div>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="text-secondary">
-                                Web Development
-                            </div>
-                            <div class="fw-bolder">
-                                jQuery
-                            </div>
-                            <div class="text-secondary">
-                                123K Tweets
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <img class="float-end" src="../../images/jq.png" height="100px">
+                            <i class="fa-solid fa-ellipsis float-end"></i>
                         </div>
                     </div>
 
@@ -148,13 +136,10 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="text-secondary">
-                                Web Development
+                                T The Times <i class="fa-solid fa-circle-check"></i> <small class="text-secondary"> - September 24,2021</small>
                             </div>
                             <div class="fw-bolder">
-                                NodeJS <i class="fa-solid fa-circle-check"></i> <small class="text-secondary"> - 2h</small>
-                            </div>
-                            <div class="text-secondary">
-                                123K Tweets
+                                Stanley Tucci: 'Food or sex? That's the cruellest question...'
                             </div>
                         </div>
                         <div class="col-4">
@@ -162,10 +147,11 @@
                         </div>
                     </div>
             </ul>
+            </div>
 
         </div>
 
-            <div class="col-xxl-4 col-xl-4 col-lg-4 d-none d-lg-inline-block d-xxl-inline-block d-xl-inline-block">
+            <div class="col-xxl-4 col-xl-4 col-lg-4 d-none d-lg-inline-block d-xxl-inline-block d-xl-inline-block right-section">
                 <div>
                         <ul class="list-group">
                             <li class="list-group-item fw-bolder">
@@ -174,74 +160,43 @@
                             <li class="list-group-item">
                                 <div class="row">
                                     <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/java.png" height="50px">
+                                        <img class="float-sm-start rounded-circle" src="../../images/bee.jpg" height="50px">
                                     </div>
                                     <div class="col-6">
-                                        Java <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @Java</p>
+                                        The Babylon Bee <i class="fa-solid fa-circle-check"></i>
+                                        <p class="text-secondary pt-0"> @TheBabylonBee</p>
                                     </div>
                                     <div class="col-4">
-                                        <button class="btn btn-primary w-100 mt-2 rounded-pill"> Follow </button>
+                                        <button class="btn btn-light w-100 mt-2 rounded-pill"> Follow </button>
                                     </div>
                                  </div>
 
                             <li class="list-group-item">
                                 <div class="row">
                                     <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/rs.jpg" height="50px">
+                                        <img class="float-sm-start rounded-circle" src="../../images/jack.jpeg" height="50px">
                                     </div>
                                     <div class="col-6">
-                                        Relativity Space <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @relativityspace</p>
+                                        Jack Posobiec <i class="fa-solid fa-circle-check"></i>
+                                        <p class="text-secondary pt-0"> @JackPosobiec</p>
                                     </div>
                                     <div class="col-4">
-                                        <button class="btn btn-primary w-100 mt-2 rounded-pill"> Follow </button>
+                                        <button class="btn btn-light w-100 mt-2 rounded-pill"> Follow </button>
                                     </div>
                                 </div>
 
                             <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/vg.png" height="50px">
-                                    </div>
-                                    <div class="col-6">
-                                        Virgin Galactic <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @virgingalactic</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <button class="btn btn-primary w-100 mt-2 rounded-pill"> Follow </button>
-                                    </div>
-                                </div>
-
-                            <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/nasa.png" height="50px">
-                                    </div>
-                                    <div class="col-6">
-                                        Nasa <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @NASA</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <button class="btn btn-primary w-100 mt-2 rounded-pill"> Follow </button>
-                                    </div>
-                                </div>
-
-                            <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/tesla.png" height="50px">
-                                    </div>
-                                    <div class="col-6">
-                                        Tesla <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @Telsa</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <button class="btn btn-primary w-100 mt-2 rounded-pill"> Follow </button>
-                                    </div>
+                                <div class="follow text-primary">
+                                Show more
                                 </div>
 
                         </ul>
+                    <div>
+                        <p class="terms text-secondary mt-3 ps-3"> Terms of Service&nbsp;&nbsp;&nbsp;&nbsp;Privacy Policy&nbsp;&nbsp;&nbsp;&nbsp;
+                            Cookie Policy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br>Ads info&nbsp;&nbsp;&nbsp;&nbsp;More
+                            <i class="fa-solid fa-ellipsis"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-regular fa-copyright"></i>2021 Twitter,Inc.</p>
+
+                    </div>
 
                 </div>
         </div>
