--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
     <li><a href="a2/index.html">Assignment 2 - html</a></li>
     <li><a href="a3/index.html">Assignment 3 - CSS</a></li>
     <li><a href="a4/index.html">Assignment 4 - Bootstrap</a></li>
+    <li><a href="a5/index.html">Assignment 5 - JavaScript</a></li>
+    <li><a href="a5/todo/index.html">a5 - todo</a></li>
+
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
 
     <!--    <div id="root"></div>-->
