--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -1,208 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Explore</title>
     <link href="../../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../vendors/bootswatch/bootstrap.min.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
           rel="stylesheet"/>
-    <link href="index.css" rel="stylesheet"/>
-
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+            crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <title>Explore screen</title>
 </head>
 <body>
-    <div class="container pt-2">
-        <div class="row">
-            <div class="col-xxl-2 col-xl-2 col-lg-1 col-md-2 col-sm-2 flex-wrap left-section">
-            <div class="list-group">
-                <i class="list-group-item fa-brands fa-twitter"></i>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fa-solid fa-house" ></i>
-                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Home</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action active">
-                    <i class="fa-solid fa-hashtag"></i> <span class="d-none d-xxl-inline-block d-xl-inline-block" >Explore</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action">
-                    <i class="fa-sharp fa-solid fa-bell"></i> <span class="d-none d-xxl-inline-block d-xl-inline-block" >Notification</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action"><i class="fa-solid fa-envelope"></i>
-                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Message</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action">
-                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Bookmarks</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action">
-                    <i class="fa-solid fa-list"></i>
-                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Lists</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action">
-                    <i class="fa-solid fa-user"></i>
-                    <span class="d-none d-xxl-inline-block d-xl-inline-block" >Profile</span>
-                </a>
-                <a href="#" class="list-group-item list-group-item-action">
-                    <i class="fa-solid fa-ellipsis"></i> <span class="d-none d-xxl-inline-block d-xl-inline-block"> More</span>
-                </a>
-            </div>
-            <button class="btn btn-primary w-100 mt-2 rounded-pill"> Tuit </button>
-        </div>
 
-            <div class="col-xxl-6 col-xl-6 col-lg-7 col-md-9 col-sm-10 middle-section">
+<div class="container" id="wd-explore"></div>
+<script src="index.js" type="module"></script>
 
-            <div class="row">
-                <div class="col-10">
-
-                    <div class="position-relative">
-                        <input class="ps-5 form-control rounded-pill" placeholder="Search Tuiter"/>
-                        <i class="ps-2 fa-solid fa-magnifying-glass position-absolute wd-search-tuiter"></i>
-                    </div>
-                </div>
-                <div class="col-2">
-                    <i class="fa-solid fa-gear position-relative wd-gear-right text-primary"></i>
-                </div>
-            </div>
-
-
-            <ul class="nav nav-tabs mt-1">
-                <li class="nav-item">
-                    <a class="nav-link" href="for-you.html">
-                        For You</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="trending.html">
-                        Trending</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="news.html">
-                        News</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="sports.html">
-                        Sports</a>
-                </li>
-                <li class="nav-item entertainment">
-                    <a class="nav-link active" href="entertainment.html">
-                        Entertainment</a>
-                </li>
-            </ul>
-            <div class="position-relative">
-                <img src="../../images/universe.jpg" width="100%"/>
-                <p class="position-absolute top-280px left-0 text-white">
-                    Music - Last night
-                </p>
-                <h1 class="position-absolute bottom-0 left-0 text-white">
-                    BTS and Coldplay release their new song, My Universe
-                </h1>
-            </div>
-
-            <div class="dark-mode-lower-middle">
-                <ul class="list-group">
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="text-secondary">
-                             Trending in R&B & soul
-                            </div>
-                            <div class="fw-bolder">
-                            R Kelly
-                            </div>
-                            <div class="text-secondary">
-                                18.2K Tweets
-                            </div>
-                        </div>
-
-                    <div class="col-4">
-                        <i class="fa-solid fa-ellipsis float-end"></i>
-                    </div>
-                    </div>
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="text-secondary">
-                                Trending in R&B & soul
-                            </div>
-                            <div class="fw-bolder">
-                                Chloe
-                            </div>
-                            <div class="text-secondary">
-                               Trending with Halle
-                            </div>
-                        </div>
-
-                        <div class="col-4">
-                            <i class="fa-solid fa-ellipsis float-end"></i>
-                        </div>
-                    </div>
-
-                <li class="list-group-item">
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="text-secondary">
-                                T The Times <i class="fa-solid fa-circle-check"></i> <small class="text-secondary"> - September 24,2021</small>
-                            </div>
-                            <div class="fw-bolder">
-                                Stanley Tucci: 'Food or sex? That's the cruellest question...'
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <img class="float-end" src="../../images/node.png" height="100px">
-                        </div>
-                    </div>
-            </ul>
-            </div>
-
-        </div>
-
-            <div class="col-xxl-4 col-xl-4 col-lg-4 d-none d-lg-inline-block d-xxl-inline-block d-xl-inline-block right-section">
-                <div>
-                        <ul class="list-group">
-                            <li class="list-group-item fw-bolder">
-                            Who to follow
-
-                            <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/bee.jpg" height="50px">
-                                    </div>
-                                    <div class="col-6">
-                                        The Babylon Bee <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @TheBabylonBee</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <button class="btn btn-light w-100 mt-2 rounded-pill"> Follow </button>
-                                    </div>
-                                 </div>
-
-                            <li class="list-group-item">
-                                <div class="row">
-                                    <div class="col-2">
-                                        <img class="float-sm-start rounded-circle" src="../../images/jack.jpeg" height="50px">
-                                    </div>
-                                    <div class="col-6">
-                                        Jack Posobiec <i class="fa-solid fa-circle-check"></i>
-                                        <p class="text-secondary pt-0"> @JackPosobiec</p>
-                                    </div>
-                                    <div class="col-4">
-                                        <button class="btn btn-light w-100 mt-2 rounded-pill"> Follow </button>
-                                    </div>
-                                </div>
-
-                            <li class="list-group-item">
-                                <div class="follow text-primary">
-                                Show more
-                                </div>
-
-                        </ul>
-                    <div>
-                        <p class="terms text-secondary mt-3 ps-3"> Terms of Service&nbsp;&nbsp;&nbsp;&nbsp;Privacy Policy&nbsp;&nbsp;&nbsp;&nbsp;
-                            Cookie Policy&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br>Ads info&nbsp;&nbsp;&nbsp;&nbsp;More
-                            <i class="fa-solid fa-ellipsis"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa-regular fa-copyright"></i>2021 Twitter,Inc.</p>
-
-                    </div>
-
-                </div>
-        </div>
-
-
-    </div>
-    </div>
-    </body>
+</body>
 </html>
+
