--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
     <li><a href="a5/todo/index.html">a5 - todo</a></li>
 
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
+    <li><a href="tuiter/HomeScreen/index.html">A5 chal- JavaScript</a></li>
+
 
     <!--    <div id="root"></div>-->
   <!--
