--- a/public/index.html
+++ b/public/index.html
@@ -29,19 +29,20 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <h1>Welcome to Web Dev</h1>
+   <!-- <h1>Welcome to Web Dev</h1>-->
 
-    <li><a href="a2/index.html">Assignment 2 - html</a></li>
+
+    <!--<li><a href="a2/index.html">Assignment 2 - html</a></li>
     <li><a href="a3/index.html">Assignment 3 - CSS</a></li>
     <li><a href="a4/index.html">Assignment 4 - Bootstrap</a></li>
     <li><a href="a5/index.html">Assignment 5 - JavaScript</a></li>
     <li><a href="a5/todo/index.html">a5 - todo</a></li>
 
     <li><a href="tuiter/navigation.html">Tuiter</a></li>
-    <li><a href="tuiter/HomeScreen/index.html">A5 chal- JavaScript</a></li>
+    <li><a href="tuiter/HomeScreen/index.html">A5 chal- JavaScript</a></li>-->
 
 
-    <!--    <div id="root"></div>-->
+   <div id="root"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
