--- a/public/tuiter-old/bookmarks/index.html
+++ b/public/tuiter-old/bookmarks/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
   <link href="index.css" rel="stylesheet"/>
-  <link href="public/tuiter/styles.css" rel="stylesheet"/>
+  <link href="../styles.css" rel="stylesheet"/>
 
 </head>
 <body>
